--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.reda.tp</groupId>
-  <artifactId>TP1</artifactId>
+  <artifactId>ceri-m1-techniques-de-test</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
@@ -39,7 +39,7 @@
   </dependencies>
 
   <build>
-    <finalName>TP1</finalName>
+    <finalName>ceri-m1-techniques-de-test</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
