--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,37 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
 orbs:
-  codecov: codecov/codecov@3.1.1
-
+# codecov: codecov/codecov@3.2.2
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
+  # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
   build-and-test:
+    # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
+    # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # Be sure to update the Docker image tag below to openjdk version of your application.
+    # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/openjdk
     docker:
       - image: cimg/openjdk:11.0
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
+      # Checkout the code as the first step.
       - checkout
+      # Use mvn clean and package as the standard maven build phase
       - run:
           name: Build
-          command : mvn -B -DskipTests clean package
-      - run: echo "On teste le job"
+          command: mvn -B -DskipTests clean package
+      # Then run your tests!
       - run:
           name: Test
           command: mvn test
-      - codecov/upload
-      - run:
-          name: Site
-          command: mvn site
-      - run:
-          name: Post-site
-          command: mvn post-site
-workflows:
-  sample: 
-    jobs:
-    - build-and-test
 
-  #test
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+workflows:
+  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
+    # Inside the workflow, you define the jobs you want to run.
+    jobs:
+      - build-and-test
