--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,15 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     name: Test python API
     steps:
-    - uses: actions/checkout@v1
-    - name: Install requirements
-      run: pip install -r requirements.txt
     - name: Run tests and collect coverage
-      run: pytest --cov .
-    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
       run: |
         # Replace `linux` below with the appropriate OS
         # Options are `alpine`, `linux`, `macos`, `windows`
         curl -Os https://uploader.codecov.io/latest/windows/codecov
         chmod +x codecov
-        ./codecov -t ${CODECOV_TOKEN}
+        ./codecov -t ${bc22e576-b8f1-4dc3-9db2-e2f313ea4daa}
