--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,13 +5,25 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Test python API
     steps:
-    - name: Run tests and collect coverage
-      uses: codecov/codecov-action@v3
-      run: |
-        # Replace `linux` below with the appropriate OS
-        # Options are `alpine`, `linux`, `macos`, `windows`
-        curl -Os https://uploader.codecov.io/latest/windows/codecov
-        chmod +x codecov
-        ./codecov -t ${bc22e576-b8f1-4dc3-9db2-e2f313ea4daa}
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: bc22e576-b8f1-4dc3-9db2-e2f313ea4daa
+  run:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up JDK 18
+        uses: actions/setup-java@v1
+        with:
+          java-version: 18.0.1
+      - name: coverage
+        run: mvn -B clean package -DskipTests
+      - name: Run tests and collect coverage
+        run: mvn -B test
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: bc22e576-b8f1-4dc3-9db2-e2f313ea4daa
