--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
                 </dependencies>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.4.0</version>
+            </plugin>
+
+
         </plugins>
 
     </build>
