--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,9 @@ jobs:
     steps:
       # Checkout the code as the first step.
       - checkout
+      - run:
+          name: javadoc
+          command: mvn javadoc:javadoc
       # Use mvn clean and package as the standard maven build phase
       - run:
           name: Build
