--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
           <artifactId>checkstyle</artifactId>
           <version>10.1</version>
       </dependency>
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-collections4</artifactId>
+          <version>4.0</version>
+      </dependency>
   </dependencies>
 
 
